Fixing carousel caption on mobile size

--- a/style.css
+++ b/style.css
@@ -78,6 +78,9 @@ body {
         width: 300px;
         height: 200px;
     }
+    .carousel-caption h1 {
+        font-size: 20px;
+    }
 }
 
 .container .row .shop-info {
